--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,7 +20,7 @@ main:
     weight: 40
 
   - name: Contact
-    url: <jqz@mail.dlut.edu.cn>
+    link: mailto:jqz@mail.dlut.edu.cn
     weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
