--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,9 +20,12 @@ main:
     weight: 40
 
   - name: Contact
-    link: mailto:jqz@mail.dlut.edu.cn
+    url: mailto:jqz@mail.dlut.edu.cn
     weight: 50
 
+  - name: 0.0
+    link: https://www.baidu.com/
+    weigth: 60
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
 #  - name: CV
