--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -24,7 +24,7 @@ main:
     weight: 50
 
   - name: 0.0
-    link: https://www.baidu.com/
+    link: (https://www.baidu.com/)
     weigth: 60
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
