--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -23,7 +23,7 @@ main:
     url: mailto:jqz@mail.dlut.edu.cn
     weight: 50
 
-  - name: 0.0(https://www.baidu.com/)
+  - name: <i class="fas fa-alien-monster"></i>
     link: (https://www.baidu.com/)
     weigth: 60
 # Link to a PDF of your resume/CV from the menu.
