--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,7 +19,7 @@ main:
     url: '#projects'
     weight: 40
 
-  - name: [Contact](https://www.baidu.com/)
+  - name: Contact
     url: mailto:jqz@mail.dlut.edu.cn
     weight: 50
 
