--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,6 +22,10 @@ main:
   - name: Contact
     link: 'mailto:jqz@mail.dlut.edu.cn'
     weight: 50
+    
+  - name: Photo
+    link: Events
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
